--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#fb1" />
     <meta
       name="description"
       content="Social Pet - Rede social para pets"
@@ -27,7 +27,7 @@
     <title>Social Pet</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>É necessário habilitar o JavaScript para acessar este site.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
